tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__EuropiumDopedWaf-AAAAAAAAAAAAAAAAAAAKRg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2630,
  "prerequisites": [
    3229723822260210658,
    1213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These boules are more efficient when making wafers out of them than Naquadah.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Europium Doped Wafers",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3229723822260210658,
    1213
  ],
  "rewards": [],
  "tasks": []
}
