tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__FusionReactorMKI-AAAAAAAAAAAAAAAAAAAErQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1197,
  "prerequisites": [
    2627,
    1610395827666138398,
    2631,
    1213,
    2622
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have some Europium, put it to use by making a MK II reactor.\n\nThis one requires the same block placement, but replaces the LuV casings with fusion machine casings and the superconducting coil blocks with fusion coil blocks. The energy hatches must now be at least ZPM too.\n\nEach energy hatch has an energy capacity of 20M EU and draws up to 8192 EU/t. That means it can handle start costs up to 320M EU and power consumption up to 131072 EU/t. Furthermore, MK I recipes in a MK II reactor are granted a 2/2 perfect overclock which doubles the speed and power consumption.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fusion Reactor MKII - Bigger, Better, Fusor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2627,
    1610395827666138398,
    2631,
    1213,
    2622
  ],
  "rewards": [],
  "tasks": []
}
