tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__ItNeedsaPowerPlu-AAAAAAAAAAAAAAAAAAABeg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 378,
  "prerequisites": [
    375
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Given the fact that I will be able to craft this device, it needs some kind of \"plug\" to get the power out. I need something to conduct immense amounts of power. I thought about superconductors, but they don't fit with the crystal casing material I have in mind. I need 2 different crystals, one for positive and one for negative charge.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "It Needs a Power Plug...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    375
  ],
  "rewards": [],
  "tasks": []
}
