tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__LasersSolveEvery-AAAAAAAAAAAAAAAAAAAKqg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2730,
  "prerequisites": [
    2006
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Laser hatches are a high-end way of sending lots of amps of power, so much in fact, that it starts at 256A. This goes 1024/4096/16384+ and continues from there. They're also so powerful that only a few machines support them outside of the ever §owonderful§r TecTech: LSC, MBF, MVF, and PSS. Remember to paint the Laser Vacuum Pipes, the Source Hatch, and the Target Hatch. Also, Source = Output, Target = Input. Laser Vacuum Pipes do not split or bend, to turn your laser use [note]Active Transformer[/note]. Later on you can use Laser Vacuum Mirror to bend your Laser Vacuum Pipes, this will however not allow splitting.\n\n[note]Laser hatches can have their operational amperage adjusted in their GUI.[/note]\n\n[warn]Be careful with using very high amp hatches as every Laser Hatch has 1EU/s * max amps passive power loss. For example, a 256A Laser Source Hatch and 256A Laser Target Hatch will both lose 256 EU/s regardless of the amount of power flowing through.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Lasers Solve Everything",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2006
  ],
  "rewards": [],
  "tasks": []
}
