tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__LearningCurveWhe-AAAAAAAAAAAAAAAAAAAH1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2005,
  "prerequisites": [
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Only dangerous cliffs to fly off. TecTech can be the source of adventures, scary and satisfying.\n\nThanks to Piky/Scripted for giving you some guardrails to stay on the road. Scripted/Piky shed blood over these quests for you. Now it's your turn!\n\nFor additional details on TecTech, check out the wiki at [url]https://github.com/Technus/TecTech/wiki[/url]\n\nYou'll probably receive better help in Discord, though.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Learning Curve? Where We're Going There Are No Curves",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2610
  ],
  "rewards": [],
  "tasks": []
}
