tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__NNQQNQQ-AAAAAAAAAAAAAAAAAAALhg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2950,
  "prerequisites": [
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you want some naquadria?\n\nUnfortunately, the naquadria dust has become repulsive naquadria oxide mixture dust because of a NERF. You have to build a line for it, like the naquadah.\n\n[warn]Hold 16 Naquadria Ingots / Dust to skip this questline.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "N.N.Q.Q.N.Q.Q",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2610
  ],
  "rewards": [],
  "tasks": []
}
